--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,26 +14,25 @@ html(lang='en')
         div(class='col-sm-2')
           block sidebar
             ul(class='sidebar-nav')
-              li
-                a(href='/jobs') Home
-              li
-                a(href='/jobs/jobs') All jobs
-              li
-                a(href='/jobs/users') All users
-              li
-                a(href='/jobs/categories') All categories
-              li
-                a(href='/jobs/jobinstances') All job-instances
-              li
+              li 
+                a(href='/catalog') Home
+              li 
+                a(href='/catalog/jobs') All jobs
+              li 
+                a(href='/catalog/users') All users
+              li 
+                a(href='/catalog/categories') All categories
+              li 
+              li 
                 hr
-              li
-                a(href='/jobs/user/create') Create new user
-              li
-                a(href='/jobs/category/create') Create new category
-              li
-                a(href='/jobs/job/create') Create new job
-              li
-                a(href='/jobs/jobinstance/create') Create new job instance (copy)
-
+              li 
+                a(href='/catalog/user/create') Create new user
+              li 
+                a(href='/catalog/category/create') Create new category
+              li 
+                a(href='/catalog/job/create') Create new job
+              //li 
+                a(href='/catalog/jobinstance/create') Create new job instance (copy)
+                
         div(class='col-sm-10')
           block content
