--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -29,3 +29,23 @@
   .trackingPara {
     width: 40%;
   }
+  .features {
+      display: flex;
+      margin: 10rem 0 0 0;
+  }
+  #featuresHeading {
+    display: block;
+    
+
+  }
+  .row {
+      display: flex;
+      flex-direction: row;
+      column-count: 3;
+      column-gap: 40px;
+      width: 100%;
+  }
+  img {
+      width: 25%;
+      justify-content: space-between;
+  }
