--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,21 @@ body {
 
 .job-card{
   /* background: hotpink; */
+  position: relative;
   background: white;
   color: #353535 !important;
   /* width: 100%; */
   /* height: 200px; */
-  margin-bottom: 20px;
-  padding-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
   border-radius: 10px;
+  display: flex;
+  flex-flow: row nowrap;
 }
 .board-col {
   background: #535353;
   border-radius: 10px;
-  padding: 20px 20px 1px 20px;
+  padding: 10px;
   min-height: 25vh;
 }
 .wrapper {
@@ -29,8 +32,8 @@ body h3, body h2 {
   color: #ffffff;
 }
 
-input{
-  color: red !important;
+input, .form-label{
+  color: #353535 !important;
 }
 
 h5 {
@@ -41,10 +44,14 @@ h5 {
 .form-wrapper {
   display: flex;
   border-radius: .2rem;
-  margin: 0 auto;
+  margin: 0;
+  width: 100%;
+  text-align: center;
   color: black !important;
-  padding: 4rem 4rem;
+  padding: 2rem;
 }
+
+
 .modal-content {
 
   width: 60%;
@@ -95,7 +102,7 @@ h1 {
   z-index: -20;
   width: 100vw;
   height: 50vh;
-  max-height: 400px;
+  max-height: 300px;
   object-fit: cover;
   object-position: bottom;
 }
@@ -109,6 +116,7 @@ h1 {
   vertical-align: middle;
 }
 
+.sm {width: 10px}
 .l {width: 1.5rem}
 .xl {width: 2rem}
 
@@ -123,25 +131,23 @@ h1 {
 
 }
 .form-group {
-  width: 195%;
-
-  margin-left: -1rem;
+  margin-bottom: 2rem;
 }
 .form-label {
-  margin: 0 30%;
+  /* margin: 0 30%; */
   align-items: center;
   width: fit-content;
 }
 .form-control {
-  margin: 1rem -1rem;
-  width: 60%;
+  /* margin: 1rem -1rem; */
+  /* width: 60%; */
+  width: 100%;
 }
 #createSubmit {
   margin: 1rem 3rem;
 }
 form {
-  margin-right: 1‒;
-  margin-right: 250px;
+  width: 100%;
 
 }
 .no-pad{
@@ -153,5 +159,70 @@ form {
   color: white !important;
   outline: none !important;
   border: none !important;
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+
+.position {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 16px;
+  padding-left: 10px;
+  margin-bottom: 0;
+  /* font-weight: bold; */
+}
+
+.company {
+  margin-bottom: 0;
+  padding-left: 10px;
+  font-size: 18px;
+}
+
+.expand, .close-modal {
+  position: absolute;
+  top: 10px;
+  cursor: pointer;
+  right: 10px;
+  padding: 5px;
+  background: #f1f1f1;
+  border-radius: 5px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.expand:hover {
+  /* background-color: #51CD86; */
+}
+.close-modal {
+  background: none;
+
+  /* font-size: 40px; */
+  /* width: 36px; */
+  border: 1px solid black;
+  border-radius: 200px;
+}
+
+.close-modal > * {
+  transform: rotate(0deg);
+  transition: transform 0.1s ease-in-out;
+}
+.close-modal:hover > * {
+  transform: rotate(90deg);
+}
+
+.expand > * {
+  pointer-events: none;
+  transform: scale(0.8);
+  /* transition: transform 1s ease-in-out; */
+}
+
+.expand:hover > * {
+  transform: scale(1);
+
+}
+.form-group {
   width: 100%;
 }
