--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -38,14 +38,14 @@
     
 
   }
-  .row {
+  .landingPage .row {
       display: flex;
       flex-direction: row;
       column-count: 3;
       column-gap: 40px;
       width: 100%;
   }
-  img {
-      width: 25%;
+  .landingPage img {
+    
       justify-content: space-between;
   }
