--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -1,49 +1,63 @@
 .landingPage {
     background-color: #E5E5E5;
+    margin-top: 0px;
+    color: #000000;
 }
-.sign-in-para {
-    margin: 0 0 0 50rem;
-  }
-  .searchSection {
+/* .landingSignIn {
+    position: absolute;
+width: 215px;
+height: 44px;
+left: 250px;
+top: 793px;
+} */
+/* .sign-in-para {
+    margin: 0 0 0 30rem;
+    width: 80%;
+  } */
+  .LPSection {
       display: flex;
-      margin: 10% 0 12% 0;
+      margin: 7% 0 12% 0;
   }
-  .searchPara {
+  .LPPara {
       width: 40%;
+      margin-right: 5rem;
+      margin-left: 2rem;
   }
-  .searchImage {
+  /* .searchImage {
       width: 40%;
       display: flex;
-  }
-  .image {
+  } */
+  /* .LPimage {
       margin: auto;
 
-  }
-  .trackingSection {
+  } */
+  /* .trackingSection {
       display: flex;
-  }
+  } */
   .trackingImg {
       width: 40%;
       display: flex;
   }
-  .trackingPara {
+  /* .LPPara {
     width: 40%;
-  }
+  } */
   .features {
-      display: flex;
-      margin: 10rem 0 0 0;
+      /* display: flex; */
+      /* margin: 10rem 0 0 0; */
   }
   #featuresHeading {
-    display: block;
+    text-align: center;
     
 
   }
-  .landingPage .row {
+  .featureRow {
       display: flex;
+      justify-content: space-around;
       flex-direction: row;
       column-count: 3;
       column-gap: 40px;
       width: 100%;
+      border: 1px solid purple;
   }
   .landingPage img {
     
