delete working, links working, modal styles

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -32,6 +32,8 @@ $body-color: #FFFFFF;
 $theme-colors: (
   "primary": #51CD86,
   "dark": #535353,
+  "secondary": #C4C4C4,
+  "info": dodgerblue,
   "danger": red,
 );
 
