--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,11 @@ h5 {
   font-size: 24px;
 }
 .form-wrapper {
-  display: flex;
+  /* display: flex; */
   border-radius: .2rem;
   margin: 0;
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
   color: black !important;
   padding: 2rem;
 }
@@ -126,17 +126,21 @@ h1 {
   padding: 0 2rem;
 }
 .round {
-  margin: 10% 30%;
-  width: 9rem;
+  /* margin: 10% 30%; */
+  /* width: 9rem; */
 
 }
 .form-group {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .form-label {
   /* margin: 0 30%; */
-  align-items: center;
+  /* align-items: center; */
   width: fit-content;
+  text-align: left;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 0.8em;
+  font-weight: bold;
 }
 .form-control {
   /* margin: 1rem -1rem; */
@@ -163,6 +167,9 @@ form {
   width: 100%;
   margin-bottom: 10px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 
@@ -231,5 +238,14 @@ form {
 .sign-in-para {
   margin: 0 0 0 50rem;
 }
+.external-link {
+  margin-left: 1rem;
+}
 
-
+.button-zone {
+  margin-top: 30px;
+  text-align: center;
+}
+.button-zone > * {
+  margin: 0 .25em;
+}
