styling of landing page

--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -35,10 +35,10 @@
       width: 40%;
       display: flex;
   } */
-  /* .LPimage {
-      margin: auto;
+  .LPimage {
+      margin-left: 20%;
 
-  } */
+  } 
   /* .trackingSection {
       display: flex;
   } */
