--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ h1 {
 }
 .inlineIcon {
   vertical-align: middle;
+  display: inline;
 }
 
 .sm {width: 10px}
@@ -253,4 +254,15 @@ form {
 }
 .button-zone > * {
   margin: 0 .25em;
+}
+.contact {
+  background: white;
+  color: #353535 !important;
+  border-radius: 10px;
+  padding: 10px;
+  padding-left: 20px;
+}
+
+.contact p {
+  margin-bottom: 0;
 }
